# atom_bot_project

./: celerybeat-schedule.bak  pyproject.toml  requirements.txt  tasks.py
habits/: models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
settings_app/: __init__.py  asgi.py  celery.py  settings.py  tasks.py  telegram.py  urls.py  wsgi.py
users/: models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_chat_id_customuser_telegram_username.py  0003_customuser_massage_text_customuser_user_id.py
